Changes in version 1.6.3 beta (2008-10-24):
--------------------------------------------
- Added function wxSFShapeBase::IsInside(const wxRect& rct) returning TRUE if a shape is completely inside given rectangle.
- New shapes created by wxSFDiagramManager::AddShape(wxClassInfo* shapeInfo, const wxPoint& pos, bool saveState) function
  are assigned to an underlying shape (if exists) as its child automatically.
- Functions GetShapeAtPosition(), GetShapesAtPosition() and GetShapesInside() are now members of wxSFDiagramManager class. Their
  previous implementation in wxSFShapeCanvas class now calls these new originals. This modification allows user to call the functions
  even if no canvas exists yet.
- Fixed mixed multiple selection of child and top-most shapes (all shapes had been assigned to the last clicked shape's parent).
- Fixed potentional assertion fault in wxSFLineShape::OnLeftDoubleClick(const wxPoint& pos) event handler.

Changes in version 1.6.2 beta (2008-09-27):
--------------------------------------------
- Switched to use wxXmlSerializer 1.1.7:
  - Function xsPropertyIO::AddPropertyNode() is now static and takes information about xml node type.
  - Function xsSerializable::GetChild() now allows recursive search.
  - IDs of managed serialized items are now serialized automatically by default (in previous library version this task had to be
    done explicitelly by a user).
  - Fixed bug dealing with reading of float and double values on platforms which use ',' decimal character (fix no.2).

- Added wxSFFlexGridShape with a behaviour similar to classic wxFlexGridSizer (each grid's column and row can have different size).
- wxSFShapeBitmap::CreateFromFile() function now takes also bitmap type parameter (use bitmap types supported by wxBitmap class). Previously
  only BMP files were supported.
- wxSFDiagramManager::AddShape(wxClassInfo* shapeInfo, const wxPoint& pos, bool saveState) function doesn't Refresh() new shape anymore